# rules_player

./: .autorc  .bazelignore  .bazelrc  .gitignore  .npmrc  BUILD  CHANGELOG.md  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  WORKSPACE.bzlmod  conf.bzl  index.bzl  justfile  libs.versions.toml  maven-lock.json  maven_install.json  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  workspace.bzl
.circleci/: config.yml
android/: workspace.bzl
apple/: conf.bzl  rules_deps.bzl  support_deps.bzl  workspace.bzl
bazel/: conf.bzl  workspace.bzl
cocoapods/: BUILD  cocoapod.bzl  conf.bzl  convert_ios_test_reports.py  pod_repo_push.sh  pod_trunk_push.sh  workspace.bzl
distribution/: BUILD  NexusStagingCli.kt  conf.bzl  defs.bzl  deps.bzl  index.bzl  maven.bzl  staged-maven-deploy.sh  workspace.bzl
distribution/private/: BUILD  build_constants.bzl
distribution/tar/: BUILD  WORKSPACE  defs.bzl  stamp_tar_files.bzl  stamp_tar_files.js
distribution/tar/private/: BUILD  stamp_tar_files.bzl  stamp_tar_files.mjs
docs/: BUILD  distribution.md  ios.md  javascript.md  kotlin.md  player.md  rules.md
examples/: BUILD
examples/kotlin/: .bazelrc  AndroidLib.kt  BUILD  Lib.kt  MODULE.bazel  Tests.kt  WORKSPACE  lib.kt
examples/kotlin/api/: android_lib.api  kt_lib.api
examples/kotlin/src/main/: AndroidManifest.xml
examples/python/: .bazelrc  BUILD  MODULE.bazel  WORKSPACE  requirements.txt
examples/ts-monorepo/: .bazelrc  BUILD  MODULE.bazel  WORKSPACE  package.json  tsconfig.json
gh-pages/: BUILD  README.md  defs.bzl  gh-deploy.bzl  gh-pages.js  gh-pages.ts  index.bzl
gh-pages/private/: BUILD  gh-deploy.bzl  gh-pages.js
internal/: BUILD  defs.bzl  maybe.bzl  scope_name.bzl  stamp.bzl  stamp_replacement.js
internal/private/: BUILD  run_all_of_kind.sh  scope_name.bzl  stamp.bzl  stamp_replacement.js
ios/: BUILD  defs.bzl
ios/private/: BUILD  cocoapods_publishing.bzl  common_utils.bzl  discover_ios_targets.bzl  discover_ios_targets.sh  pod_repo_push.sh  publishing.bzl  push.sh  spm_publishing.bzl  unzip_and_tag.sh  zip.bzl
ios/private/tests/: BUILD  run_bats_test.mjs  run_bats_test.sh  test_zip_assembly.bats  test_zip_assembly.bzl  test_zip_integration.bzl
ios/private/tests/resources/: Package.swift  TestResource.txt  TestSource.swift  test.podspec
javascript/: BUILD  README.md  conf.bzl  defs.bzl  js_library_pipeline.bzl  npm.bzl  utils.bzl  workspace.bzl
javascript/examples/: BUILD
javascript/examples/ts-monorepo/: .bazelignore  .bazelrc  .eslintrc.js  BUILD  MODULE.bazel  WORKSPACE  babel.config.js  index.bzl  jest.config.js  package.json  pnpm-lock.yaml  tsup.config.ts  vitest.config.ts  workspace_status.sh
javascript/examples/ts-monorepo/tools/: BUILD  vitest_coverage_mapper.ts
javascript/next/: BUILD  next.build.js  next_build.bzl
javascript/package_json/: BUILD  contributors.bzl  contributors.js  create_package_json.js  index.bzl  merge_json.bzl  merge_json.js  package_json.bzl
javascript/private/: BUILD  create_package_json.mjs  eslint.bzl  js_pipeline.bzl  oclif.bzl  package_json.bzl  tsconfig.json.tmpl  tsup.bzl  utils.bzl  vitest.bzl
javascript/rollup/: BUILD  rollup.config.template.js  rollup_build.bzl
junit5/: conf.bzl  workspace.bzl
kotlin/: BUILD  README.md  android.bzl  build.bzl  conf.bzl  defs.bzl  distribution.bzl  kt_android.bzl  kt_jvm.bzl  lint.bzl  repository.bzl  workspace.bzl
kotlin/example/: BUILD  MODULE.bazel  WORKSPACE  libtest.kt
kotlin/examples/kotlin-archive/: BUILD  WORKSPACE  lib.test.kt
kotlin/examples/kotlin-defaults/: BUILD  WORKSPACE
kotlin/examples/kotlin-repository/: WORKSPACE
kotlin/private/: BUILD  abi.bzl  distribution.bzl  junit5.bzl  junit_test.bzl  kt_android.bzl  kt_android_library_and_test.bzl  kt_jvm.bzl  kt_jvm_library_and_test.bzl  lint.bzl  scope_name.bzl
kotlin/private/abi/: AbiCli.kt  BUILD  abi_update_all.sh
maven/: parse_coordinates.bzl  workspace.bzl
player/: BUILD  README.md  defs.bzl
player/bundle/: bundle.bzl
player/cli/: workspace.bzl  xlr.bzl
player/private/: BUILD  config.bzl  dsl.bzl  js_xlr_pipeline.bzl  kt_player_plugin_wrapper.bzl  mocks.bzl  player.config.js.template  player.config.json.template  xlr.bzl
player/vsce/: BUILD  index.bzl  package.bzl  vsce_stamp.bzl  vsce_stamp.js  workspace.bzl
private/: BUILD  maven.bzl
python/: BUILD  defs.bzl
python/private/: BUILD  build_requirements.bzl  build_requirements.mjs  py_pipeline.bzl
scripts/: bazel-usage-note-auto-plugin.js  test.sh
shell/: BUILD  defs.bzl
shell/private/: BUILD  shell.bzl
swift/: conf.bzl  extra_deps.bzl  rules_deps.bzl  workspace.bzl
