module(
    name = "rules_player",
    version = "1.0",
)

bazel_dep(name = "cgrindel_bazel_starlib", version = "0.21.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.17.1")
bazel_dep(name = "aspect_rules_js", version = "2.3.7")
bazel_dep(name = "aspect_rules_rollup", version = "2.0.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "aspect_rules_ts", version = "3.6.0")
bazel_dep(name = "platforms", version = "0.0.9")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)
rules_ts_ext.deps(
    ts_version_from = "//:package.json",
)

use_repo(rules_ts_ext, "npm_typescript")

bazel_dep(name = "rules_kotlin", version = "1.9.1")
bazel_dep(name = "rules_java", version = "7.2.0")
bazel_dep(name = "rules_jvm_external", version = "6.7")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "rules_player_maven",
    artifacts = [
        "com.github.ajalt.clikt:clikt-jvm:3.4.0",
        "io.github.gradle-nexus:publish-plugin:1.1.0",
        "ch.qos.logback:logback-classic:1.2.11",
        "org.junit.jupiter:junit-jupiter-api:5.7.2",
        "org.junit.jupiter:junit-jupiter-params:5.7.2",
        "org.junit.jupiter:junit-jupiter-engine:5.7.2",
        "org.junit.platform:junit-platform-suite-api:1.7.2",
        "org.junit.platform:junit-platform-console:1.7.2",
        "org.junit.platform:junit-platform-launcher:1.7.2",
    ],
    fetch_sources = True,
    repositories = [
        "https://repo1.maven.org/maven2",
        "https://maven.google.com/",
        "https://plugins.gradle.org/m2/",
    ],
)
use_repo(maven, "rules_player_maven")

bazel_dep(name = "rules_android", version = "0.6.5")

## Rule Dependencies
bazel_dep(name = "rules_swift", version = "2.9.0", repo_name = "build_bazel_rules_swift")
bazel_dep(name = "rules_apple", version = "3.22.0", repo_name = "build_bazel_rules_apple")

bazel_dep(name = "rules_bazel_integration_test", version = "0.24.1", dev_dependency = True)

bazel_binaries = use_extension("@rules_bazel_integration_test//:extensions.bzl", "bazel_binaries", dev_dependency = True)
bazel_binaries.download(version_file = ".bazelversion")
use_repo(bazel_binaries, "bazel_binaries", "bazel_binaries_bazelisk", "build_bazel_bazel_.bazelversion")
bazel_dep(name = "zlib", version = "1.3.1")