module(
    name = "rules_player",
    version = "1.0",
)

bazel_dep(name = "cgrindel_bazel_starlib", version = "0.21.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "aspect_rules_js", version = "2.3.8")
bazel_dep(name = "aspect_rules_rollup", version = "2.0.1")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "rules_nodejs", version = "6.4.0")
bazel_dep(name = "aspect_rules_ts", version = "3.8.10")
bazel_dep(name = "platforms", version = "1.0.0")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)
rules_ts_ext.deps(
    ts_version_from = "//:package.json",
)

use_repo(rules_ts_ext, "npm_typescript")

bazel_dep(name = "rules_kotlin", version = "2.3.21")
bazel_dep(name = "rules_java", version = "8.13.0")
bazel_dep(name = "rules_jvm_external", version = "7.0")
# Force upgrade to avoid polluting @maven scope
bazel_dep(name = "bazel_worker_java", version = "0.0.6")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.from_toml(
    name = "rules_player_maven",
    libs_versions_toml = "//:libs.versions.toml",
)
maven.install(
    name = "rules_player_maven",
    fetch_sources = True,
    lock_file = "//:maven-lock.json",
    repositories = [
        "https://repo1.maven.org/maven2",
        "https://maven.google.com/",
        "https://plugins.gradle.org/m2/",
    ],
)
use_repo(maven, "rules_player_maven")

bazel_dep(name = "rules_android", version = "0.7.2")

## Rule Dependencies
bazel_dep(name = "rules_swift", version = "3.6.1", repo_name = "build_bazel_rules_swift")
bazel_dep(name = "rules_apple", version = "4.4.0", repo_name = "build_bazel_rules_apple")

bazel_dep(name = "rules_bazel_integration_test", version = "0.24.1", dev_dependency = True)

bazel_binaries = use_extension("@rules_bazel_integration_test//:extensions.bzl", "bazel_binaries", dev_dependency = True)
bazel_binaries.download(version_file = ".bazelversion")
use_repo(bazel_binaries, "bazel_binaries", "bazel_binaries_bazelisk", "build_bazel_bazel_.bazelversion")
bazel_dep(name = "zlib", version = "1.3.1")
bazel_dep(name = "bazel_bats", version = "0.35.0")

bazel_dep(name = "rules_python", version = "1.6.1")