module(
    name = "kotlin_example",
)

bazel_dep(name = "rules_player")
local_path_override(
    module_name = "rules_player",
    path = "../..",
)

bazel_dep(name = "rules_kotlin", version = "2.1.8")
bazel_dep(name = "rules_java", version = "7.2.0")
bazel_dep(name = "rules_jvm_external", version = "6.9")
bazel_dep(name = "rules_android", version = "0.7.2")

# Android tooling + SDK so the kt_android example below can build.
# The SDK is autodetected from $ANDROID_HOME by android_sdk_repository_extension.
remote_android_extensions = use_extension(
    "@rules_android//bzlmod_extensions:android_extensions.bzl",
    "remote_android_tools_extensions",
)
use_repo(remote_android_extensions, "android_tools")

android_sdk_repository_extension = use_extension(
    "@rules_android//rules/android_sdk_repository:rule.bzl",
    "android_sdk_repository_extension",
)
use_repo(android_sdk_repository_extension, "androidsdk")

register_toolchains("@androidsdk//:sdk-toolchain", "@androidsdk//:all")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.junit.jupiter:junit-jupiter-api:5.7.2",
        "org.junit.jupiter:junit-jupiter-params:5.7.2",
        "org.junit.jupiter:junit-jupiter-engine:5.7.2",
        "org.junit.platform:junit-platform-suite-api:1.7.2",
        "org.junit.platform:junit-platform-console:1.7.2",
        "org.junit.platform:junit-platform-launcher:1.7.2",
    ],
    fetch_sources = True,
    repositories = [
        "https://repo1.maven.org/maven2",
        "https://maven.google.com/",
        "https://plugins.gradle.org/m2/",
    ],
)
use_repo(maven, "maven")
