module(
    name = "python_example",
)

bazel_dep(name = "rules_player")
local_path_override(
    module_name = "rules_player",
    path = "../..",
)


####### Python Setup #########
bazel_dep(name = "aspect_bazel_lib", version = "2.17.1")
bazel_dep(name = "rules_python", version = "1.6.1")
bazel_dep(name = "platforms", version = "0.0.11")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.13",
)

use_repo(python, "python_3_13")
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    hub_name = "pypi",
    python_version = "3.13",
    requirements_lock = "//:requirements.txt",
)

use_repo(pip, "pypi")