module(name = "ts-monorepo-example")

bazel_dep(name = "rules_player")
local_path_override(
    module_name = "rules_player",
    path = "../..",
)

bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "aspect_rules_js", version = "1.33.1")
bazel_dep(name = "aspect_rules_rollup", version = "1.0.0")
bazel_dep(name = "rules_nodejs", version = "5.8.2")
bazel_dep(name = "aspect_rules_ts", version = "2.1.0")

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "16.4.2")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    data = [
        "//:package.json",
    ],
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
    npm_package_target_name = "{dirname}"
)
use_repo(npm, "npm")
